{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 390,
  "lineage": "2e6a9d63-d823-f091-5986-e3659c8c47e0",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725259254:vpc/vpc-08567736d5f3e8bd0",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0eb56c4fa0ba22570",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0723109ac37da2be7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08567736d5f3e8bd0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03eededbff6dae4dc",
            "owner_id": "851725259254",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d05471b100e9083f",
            "arn": "arn:aws:ec2:us-east-1:851725259254:instance/i-0399dbd739c8d72b0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nodes-ec2-profile",
            "id": "i-0399dbd739c8d72b0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "test_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04a9f793f3633b350"
              }
            ],
            "primary_network_interface_id": "eni-04a9f793f3633b350",
            "private_dns": "ip-172-31-79-54.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.79.54",
            "public_dns": "ec2-32-193-0-128.compute-1.amazonaws.com",
            "public_ip": "32.193.0.128",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05dca29b52a91488e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_all"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025819df2d3d3cc22",
            "tags": {
              "Name": "control-plane",
              "kubernetes.io/cluster/k8s-lab-cluster": "owned"
            },
            "tags_all": {
              "Name": "control-plane",
              "kubernetes.io/cluster/k8s-lab-cluster": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07ffa997c5869892f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725259254",
            "id": "i-0399dbd739c8d72b0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.nodes_profile",
            "aws_iam_role.aws_api_role",
            "aws_security_group.allow_all",
            "data.aws_ami.amazon_linux_2",
            "data.aws_iam_policy_document.instance-assume-role-policy",
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "w_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d05471b100e9083f",
            "arn": "arn:aws:ec2:us-east-1:851725259254:instance/i-062194530e13e03b9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nodes-ec2-profile",
            "id": "i-062194530e13e03b9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "test_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08d490e65dd8d1d47"
              }
            ],
            "primary_network_interface_id": "eni-08d490e65dd8d1d47",
            "private_dns": "ip-172-31-64-98.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.64.98",
            "public_dns": "ec2-44-201-98-29.compute-1.amazonaws.com",
            "public_ip": "44.201.98.29",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-044af1411c2233e90",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_all"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025819df2d3d3cc22",
            "tags": {
              "Name": "worker-1",
              "kubernetes.io/cluster/k8s-lab-cluster": "owned"
            },
            "tags_all": {
              "Name": "worker-1",
              "kubernetes.io/cluster/k8s-lab-cluster": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07ffa997c5869892f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725259254",
            "id": "i-062194530e13e03b9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.nodes_profile",
            "aws_iam_role.aws_api_role",
            "aws_security_group.allow_all",
            "data.aws_ami.amazon_linux_2",
            "data.aws_iam_policy_document.instance-assume-role-policy",
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "w_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d05471b100e9083f",
            "arn": "arn:aws:ec2:us-east-1:851725259254:instance/i-036fdc58b09cfd857",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nodes-ec2-profile",
            "id": "i-036fdc58b09cfd857",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "test_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-007332ec39374cbf8"
              }
            ],
            "primary_network_interface_id": "eni-007332ec39374cbf8",
            "private_dns": "ip-172-31-70-21.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.70.21",
            "public_dns": "ec2-100-48-74-136.compute-1.amazonaws.com",
            "public_ip": "100.48.74.136",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04d401f8c81f3424a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_all"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025819df2d3d3cc22",
            "tags": {
              "Name": "worker-2",
              "kubernetes.io/cluster/k8s-lab-cluster": "owned"
            },
            "tags_all": {
              "Name": "worker-2",
              "kubernetes.io/cluster/k8s-lab-cluster": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07ffa997c5869892f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725259254",
            "id": "i-036fdc58b09cfd857",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.nodes_profile",
            "aws_iam_role.aws_api_role",
            "aws_security_group.allow_all",
            "data.aws_ami.amazon_linux_2",
            "data.aws_iam_policy_document.instance-assume-role-policy",
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725259254:security-group/sg-07ffa997c5869892f",
            "description": "Allow all inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-07ffa997c5869892f",
            "ingress": [],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "851725259254",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all"
            },
            "tags_all": {
              "Name": "allow_all"
            },
            "timeouts": null,
            "vpc_id": "vpc-08567736d5f3e8bd0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725259254",
            "id": "sg-07ffa997c5869892f",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_outbound_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725259254:security-group-rule/sgr-0f54e87cab1ad1109",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0f54e87cab1ad1109",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-07ffa997c5869892f",
            "security_group_rule_id": "sgr-0f54e87cab1ad1109",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725259254",
            "id": "sgr-0f54e87cab1ad1109",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_outbound_traffic_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725259254:security-group-rule/sgr-0c5aa0fc5521ad113",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-0c5aa0fc5521ad113",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-07ffa997c5869892f",
            "security_group_rule_id": "sgr-0c5aa0fc5521ad113",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725259254",
            "id": "sgr-0c5aa0fc5521ad113",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_inbound_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725259254:security-group-rule/sgr-072c45f503cae8749",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-072c45f503cae8749",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-07ffa997c5869892f",
            "security_group_rule_id": "sgr-072c45f503cae8749",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725259254",
            "id": "sgr-072c45f503cae8749",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_inbound_traffic_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725259254:security-group-rule/sgr-0a01126648d52829a",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-0a01126648d52829a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-07ffa997c5869892f",
            "security_group_rule_id": "sgr-0a01126648d52829a",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725259254",
            "id": "sgr-0a01126648d52829a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    }
  ]
}